some stylistic changes, fixed the issue with overflowing columns

--- a/public/css/css/bootstrap.css
+++ b/public/css/css/bootstrap.css
@@ -5704,12 +5704,12 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #80CBC4;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #80CBC4;
+  border-color: #80CBC4;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #337ab7;
